--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
    
 
 
-    <title>Washburn Real Estate</title>
+    <title>Real Estate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
